# shopeasy-support-gym

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  evaluation.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_submission.py  validate_submission.py
grader/: support_tasks.py
reward/: __init__.py  grader.py
server/: Customer_Support_Gym_2_environment.py  __init__.py  app.py  mcp_server.py  requirements.txt
server/data/: __init__.py  customers.py  knowledge_base.py  orders.py  scenarios.py
server/engine/: __init__.py  policy_engine.py  reward.py  tools.py
tasks/: __init__.py  definitions.py  graders.py
tests/: test_environment.py  test_grader.py  test_grader_endpoint.py
